--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -722,7 +722,6 @@ So, alternative 2 is more efficient.
 .Code snippet of `transactionLogic` facade class in `MainWindow`
 image::Reimbursement/codeSnippetTransactionLogic.png[]
 
-
 === Inventory Tab
 
 This tab will help to keep records of all items currently in the club’s possession.
@@ -730,45 +729,54 @@ This tab will help to keep records of all items currently in the club’s posses
 Each item will require an input of its description, category, quantity, and cost per unit.
 Optionally, if the item is meant for sale, the price can be inputted as well.
 
+The following Class Diagram shows the architectural design of the tab:
+
+.Class Diagram of Inventory tab (inventory package)
+image::InventoryTabClassDiagram.png[]
+
 ==== Add Item Feature
 This section explains the implementation of the add command feature of the Inventory Tab,
 which allows the addition of items to the inventory. These items are represented by `Item` objects.
 The addition of an `Item` to the inventory requires an input of the `Item`’s description, category, quantity, and cost.
 The price field is optional and may be added only to an `Item` meant for sale.
 
-Due to the usage of `ArgumentMultimap`, the fields can be in any order as they are retrieved via the prefixes that
-precede them.
+The following Sequence Diagram shows how the AddCommandParser creates an `Item`:
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
-`AddCommand` works:
+.Sequence Diagram of the add command parser in the Inventory tab (inventory package)
+image::inventoryDG/AddCommandParserSeqDiagram.png[]
 
-.Sequence Diagram of the Add Command in the Inventory Tab (inventory package)
-image::inventoryDG/AddCommandSeqDiagram.png[]
-
-//.Class Diagram of Inventory tab (inventory package)
-//image::InventoryTabClassDiagram.png[]
+As seen in the above diagram, the parser takes in the user input as well as the existing `InventoryList`. Within the
+parser, it will use the `ArgumentTokenizer` to tokenize the arguments using the prefixes. This creates an
+`ArgumentMultimap`, allowing the system to retrieve the user input based on the prefixes that precede them. Thus, this
+increases the accuracy of the parsing and allows the fields to be in any order in the user input.
 
 If the description of the `Item` being added matches that of an existing `Item`, the new `Item`’s quantity is added to
 that of the existing `Item` and the cost per unit is recalculated. This is handled within the `AddCommandParser`,
-which also checks the validity of the input.
+which also checks the validity of the input using the isValidNumericString(string) method.
 
-It prohibits the addition of an `Item` with any value equivalent to or greater than 10,000. This includes the total cost
-and expected revenue of each `Item`. It also prohibits non-numeric inputs where numeric inputs are expected.
-This is conducted through the isValidNumericString(string) method which performs the aforementioned checks and
-returns a `Boolean` that represents the validity of the input.
+The code for the `AddCommandParser#isValidNumericString(String)` can be seen in the code snippet below:
 
-The following Sequence Diagram shows how the `AddCommandParser` creates an `Item`:
+.Code snippet of the `AddCommandParser#isValidNumericString(String)` method in the Inventory tab (inventory package)
+image::inventoryDG/AddCommandSnippet.png[]
 
-.Sequence Diagram of the Add Command Parser in the Inventory Tab (inventory package)
-image::inventoryDG/AddCommandParserSeqDiagram.png[]
+Through this method, the application prohibits the addition of an `Item` with any value equivalent to or greater than
+10,000. This includes the total cost and expected revenue of each `Item`. It also prohibits non-numeric inputs where
+numeric inputs are expected. The `AddCommandParser#isValidNumericString(String)` method performs the aforementioned
+checks and returns a boolean that represents the validity of the input.
 
 After the `Item` is created and the command is executed, the `LogicManager` updates the in-app `InventoryList` via the
-`ModelManager` and updates the data file via the `StorageManager`.
+`ModelManager` and saves to the data file via the `StorageManager`.
 
-For a greater understanding of the flow of events and checks, you may consult the following activity diagram that shows
-the steps that follow the input of an add command:
+The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+AddCommand works:
 
-.Activity Diagram of the Add Command in the Inventory Tab (inventory package)
+.Sequence Diagram of the add command in the Inventory tab (inventory package)
+image::inventoryDG/AddCommandSeqDiagram.png[]
+
+For a greater understanding of the flow of events and checks, you may consult the following activity diagram that
+shows the steps that follow the input of an add command:
+
+.Activity Diagram of the add command in the Inventory tab (inventory package)
 image::inventoryDG/AddCommandFlowChart.png[]
 
 ==== Delete Item Feature
@@ -779,12 +787,15 @@ of items from the inventory. This feature requires only the command keyword and 
 The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `DeleteCommand` works:
 
-.Sequence Diagram of the Delete Command in the Inventory Tab (inventory package)
+.Sequence Diagram of the delete command in the Inventory tab (inventory package)
 image::inventoryDG/DeleteCommandSeqDiagram.png[]
 
 The `DeleteCommandParser` is responsible for checking the validity of the input, and does not allow any indexes that
 are less than 1 or greater than the largest index currently in the list. It can also take in a description as input and
 compares it against existing `Item` s in the `InventoryList`. This comparison is case-insensitive.
+
+After the command is executed and the `Item` is deleted, the `LogicManager` updates the in-app `InventoryList` via the
+`ModelManager` and saves to the data file via the `StorageManager`.
 
 ==== Edit Item Feature
 
@@ -794,7 +805,7 @@ items in the inventory. This feature requires the command keyword, an index and 
 The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `EditCommand` works:
 
-.Sequence Diagram of the Edit Command in the Inventory Tab (inventory package)
+.Sequence Diagram of the edit command in the Inventory tab (inventory package)
 image::inventoryDG/EditCommandSeqDiagram.png[]
 
 ==== Sort Items Feature
@@ -805,7 +816,7 @@ of items within the inventory. There are 3 ways items can be sorted - by descrip
 The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `SortCommand` works:
 
-.Sequence Diagram of the Sort Command in the Inventory Tab (inventory package)
+.Sequence Diagram of the sort command in the Inventory tab (inventory package)
 image::inventoryDG/SortCommandSeqDiagram.png[]
 
 ==== Overall Design Considerations
