--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -129,7 +129,7 @@ An outline of how a command is processed through `Logic` is as follows:
 . The command execution can affect the `Model` (e.g. adding a person, transaction).
 . The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui` (not depicted).
 
-A general sequence diagram depicting the above outline is shown below:
+A general Sequence Diagram depicting the above outline is shown below:
 
 [[GeneralLogicSD]]
 .Sequence Diagram for execution within `Logic`.
@@ -739,7 +739,7 @@ The price field is optional and may be added only to an `Item` meant for sale.
 Due to the usage of `ArgumentMultimap`, the fields can be in any order as they are retrieved via the prefixes that
 precede them.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `AddCommand` works:
 
 .Sequence Diagram of the Add Command in the Inventory Tab (inventory package)
@@ -776,7 +776,7 @@ image::inventoryDG/AddCommandFlowChart.png[]
 This section explains the implementation of the delete command feature of the Inventory Tab, which allows the deletion
 of items from the inventory. This feature requires only the command keyword and an index or description as input.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `DeleteCommand` works:
 
 .Sequence Diagram of the Delete Command in the Inventory Tab (inventory package)
@@ -791,7 +791,7 @@ compares it against existing `Item` s in the `InventoryList`. This comparison is
 This section explains the implementation of the edit command feature of the Inventory Tab, which allows you to edit
 items in the inventory. This feature requires the command keyword, an index and at least one field as input.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `EditCommand` works:
 
 .Sequence Diagram of the Edit Command in the Inventory Tab (inventory package)
@@ -802,7 +802,7 @@ image::inventoryDG/EditCommandSeqDiagram.png[]
 This section explains the implementation of the sort command feature of the Inventory Tab, which allows the sorting
 of items within the inventory. There are 3 ways items can be sorted - by description, category or quantity.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
 `SortCommand` works:
 
 .Sequence Diagram of the Sort Command in the Inventory Tab (inventory package)
@@ -909,7 +909,7 @@ There will also be checks to ensure that the item specified is available for sal
 
 If description and quantity are both valid, the `ModelManager` will add the item into the sales list as shown in Figure 2.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the `AddCommand` works:
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the `AddCommand` works:
 
 
 .Sequence Diagram of Add Command in Cashier tab (cashier package)
@@ -937,14 +937,14 @@ To set a cashier, the person's name inputted has to match an existing name in th
 This means that SetCommandParser requires access to the `Model` of the Person package where the `AddressBook` implementation is. +
 If the person's name cannot be found in the `Model` of the Person package, a response message will be shown by Leo, informing the user that there is no such person.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the SetCashierCommandParser checks for an existing person:
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the SetCashierCommandParser checks for an existing person:
 
 .Sequence Diagram of SetCashierCommandParser (cashier package)
 image::SetCashierCommandSeq1.png[]
 
 If the specified name is valid, the `Model` of the cashier package will set the person as cashier.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the set cashier command works:
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the set cashier command works:
 
 .Sequence Diagram of Set Cashier Command (cashier package)
 image::SetCashierCommandSeq2.png[]
@@ -974,7 +974,7 @@ After the execution of the above methods, a clear command will then be called au
 [NOTE]
 After checkout command is executed, boolean `onCashierMode` in ModelManager will be immediately set to false.
 
-The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the checkout command is executed:
+The following Sequence Diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the checkout command is executed:
 
 .Sequence Diagram of Checkout Command (cashier package)
 image::CheckoutCommandCashierSeq1.png[]
@@ -983,7 +983,7 @@ The `Cashier Logic` will call relevant methods to update the inventory list and 
 To update the view on the Inventory tab and Transaction tab, transaction will be added to the transaction `Model` and
 `readInUpdatedList()` method of inventory `Model` will called to read in the entire inventory data file.
 
-The following sequence diagram shows how the transaction and inventory are updated:
+The following Sequence Diagram shows how the transaction and inventory are updated:
 
 .Sequence Diagram of how transaction and inventory get updated (cashier package)
 image::CheckoutCommandCashierSeq2.png[]
@@ -1071,7 +1071,7 @@ to set percentage thresholds for notifications.
 
 This feature allows the user to set a goal for their budget, expense or sales targets.
 
-The following sequence diagram depicts how the Set Command operates, and is an extension of the general sequence diagram
+The following Sequence Diagram depicts how the Set Command operates, and is an extension of the general sequence diagram
 found in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>:
 
 .Sequence Diagram of Set Command in the Overview package.
@@ -1085,7 +1085,7 @@ the data file.
 This feature allows the user to set a percentage threshold for notifications. Upon hitting that percentage for a
 particular financial goal, the user will automatically be notified of it with a message from Leo.
 
-The following sequence diagram depicts how the Notify Command operates, and is an extension of the general sequence
+The following Sequence Diagram depicts how the Notify Command operates, and is an extension of the general sequence
 diagram found in <<GeneralLogicSD, 2.3 Logic component: Figure 5>>:
 
 .Sequence Diagram of Notify Command in the Overview Package
