--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -399,7 +399,7 @@ image::userguide\CustomerList.png[width="790"]
 
 This is a customer and its information. Each card will display the customer's username, favourite cuisine, name, phone number, address and the number of orders the customer has made.
 
-image::userguide\CustomerCard.png[width="790"]
+image::userguide\CustomerCard.png[]
 
 {nbsp} +
 
